# DATA-PROJECTS

./: .env.example  CONCLUSAO.md  FILE_STRUCTURE.md  GUIA_MELHORIAS_MODELO.md  INDEX.md  INDICE.md  PROJECT_REVIEW.md  QUICK_START.md  README.md  REVISAO_ATUAL.md  REVISION_SUMMARY.md  START_HERE.md  VISUAL_SUMMARY.md  app.py  config.py  ecommerce_dataset.csv  main.py  predict.py  preprocess.py  pyproject.toml  requirements.txt  train.py  verify_setup.py
